Added CSS Hover Effect

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="item">
-        <button class="btn op">A/C</button>
+        <button class="btn op return">A/C</button>
         <button class="btn op">+/-</button>
         <button class="btn op">%</button>
         <button class="btn op">/</button>
@@ -35,7 +35,7 @@
         <div class="sub">
           <p>0</p>
         </div>
-        <button class="btn return">BACK</button>
+        <button class="btn bck return">BACKSPACE</button>
     </div>
   </div>
   </body>
