JS display and store numbers, and erase data

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="item">
-        <button class="btn op return">A/C</button>
+        <button class="btn op return reset">A/C</button>
         <button class="btn op">+/-</button>
         <button class="btn op">%</button>
         <button class="btn op">/</button>
@@ -28,12 +28,12 @@
         <button class="btn num" data-key='1'>1</button>
         <button class="btn op">+</button>
         <button class="btn num" data-key='0'>0</button>
-        <button class="btn num" data-key='.'>.</button>
+        <button class="btn num dot" data-key='.'>.</button>
         <button id='enter' class="btn op">=</button>
       </div>
       <div class="item display bd-sty">
         <div class="sub">
-          <p>0</p>
+          <p></p>
         </div>
         <button class="btn bck return">BACKSPACE</button>
     </div>
