--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
   <div class="container">
     <div class="item">
         <button class="btn op return reset">A/C</button>
-        <button class="btn op">+/-</button>
-        <button class="btn op">%</button>
-        <button class="btn op">/</button>
+        <button class="btn op" data-key='switch'>+/-</button>
+        <button class="btn op main-op" data-key='%'>%</button>
+        <button class="btn op main-op" data-key='/'>/</button>
         <button class="btn num" data-key='9'>9</button>
         <button class="btn num" data-key='8'>8</button>
         <button class="btn num" data-key='7'>7</button>
-        <button class="btn op">X</button>
+        <button class="btn op main-op" data-key='*'>X</button>
         <button class="btn num" data-key='6'>6</button>
         <button class="btn num" data-key='5'>5</button>
         <button class="btn num" data-key='4'>4</button>
-        <button class="btn op">-</button>
+        <button class="btn op main-op" data-key='-'>-</button>
         <button class="btn num" data-key='3'>3</button>
         <button class="btn num" data-key='2'>2</button>
         <button class="btn num" data-key='1'>1</button>
-        <button class="btn op">+</button>
+        <button class="btn op main-op" data-key='+'>+</button>
         <button class="btn num" data-key='0'>0</button>
         <button class="btn num dot" data-key='.'>.</button>
         <button id='enter' class="btn op">=</button>
