Edit JS working - missing %, clear all and backspace

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
-  <script src="./calculator-r00.js" defer></script>
+  <script src="./calculator.js" defer></script>
   <title>Calculator</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
     <div class="item">
         <button class="btn op return reset">A/C</button>
         <button class="btn op" data-key='switch'>+/-</button>
-        <button class="btn op main-op" data-key='%'>%</button>
+        <button class="btn op" data-key='%'>%</button>
         <button class="btn op main-op" data-key='/'>/</button>
         <button class="btn num" data-key='9'>9</button>
         <button class="btn num" data-key='8'>8</button>
