JS percentage Added

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div class="container">
     <div class="item">
         <button class="btn op return reset">A/C</button>
-        <button class="btn op" data-key='switch'>+/-</button>
-        <button class="btn op" data-key='%'>%</button>
+        <button class="btn op switch" data-key='switch'>+/-</button>
+        <button class="btn op perc" data-key='%'>%</button>
         <button class="btn op main-op" data-key='/'>/</button>
         <button class="btn num" data-key='9'>9</button>
         <button class="btn num" data-key='8'>8</button>
